--- a/Sample_Task_name/index.html
+++ b/Sample_Task_name/index.html
@@ -121,7 +121,7 @@
                     <div class="task-details">Git_Task</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('Git_task')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/git task.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/git task.PNG')">Sample Image</button>
                     </div>
                 </div>
                 <!-- ... Other Week tasks ... -->
@@ -129,7 +129,7 @@
                     <div class="task-details">Index_File_Updation</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('Index_file_creation')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/Index_File_Updation.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/Index_File_Updation.PNG')">Sample Image</button>
                     </div>
                 </div>
                 <!-- ... Other Week tasks ... -->
@@ -137,7 +137,7 @@
                     <div class="task-details">create_Html_file_on_Name</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('create_Html_file_on_Name')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/create_Html_file_on_Name.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/create_Html_file_on_Name.PNG')">Sample Image</button>
                     </div>
                 </div>
 
@@ -146,7 +146,7 @@
                     <div class="task-details">dulingo_updates</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('dulingo_update')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/dulingo_update.png')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/dulingo_update.png')">Sample Image</button>
                     </div>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                     <div class="task-details">create_wordpress_blog_and_7articles</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('create_wordpress_blog_and_7articles')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/create_wordpress_blog_and_7articles.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/create_wordpress_blog_and_7articles.PNG')">Sample Image</button>
                     </div>
                 </div>
                 <!-- ... Other Week tasks ... -->
@@ -169,7 +169,7 @@
                     <div class="task-details">update_linkedin_with-photo</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('update_linkedin_with-photo')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/update_linkedin_with-photo.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/update_linkedin_with-photo.PNG')">Sample Image</button>
                     </div>
                 </div>
                 <!-- ... Other Week tasks ... -->
@@ -177,7 +177,7 @@
                     <div class="task-details">create_canva-menu</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('create_canva-menu')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/create_canva-menu.png')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/create_canva-menu.png')">Sample Image</button>
                     </div>
                 </div>
                 <!-- ... Other Week tasks ... -->
@@ -185,7 +185,7 @@
                     <div class="task-details">download_figma_and_install</div>
                     <div class="task-actions">
                         <button class="btn btn-primary copy-button" onclick="copyTaskName('download_figma_and_install')">Copy Name</button>
-                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('../Sample Images/download_figma_and_install.PNG')">Sample Image</button>
+                        <button class="btn btn-primary view-image-button" onclick="openImagePopup('Sample Images/download_figma_and_install.PNG')">Sample Image</button>
                     </div>
                 </div>
             </div>
