--- a/Sample_Task_name/index.html
+++ b/Sample_Task_name/index.html
@@ -187,7 +187,7 @@ window.onload = function () {
 
     <!-- Fixed note outside of the container -->
     <div class="fixed-note">
-        <strong>"If you have multiple screenshots for a task, make use of this
+        <strong>"If you have multiple screenshot for a task, make use of this
             <a href="https://merge.imageonline.co/" target="_blank">website</a> to merge"
         </strong>
     </div>
